--- a/projects.html
+++ b/projects.html
@@ -118,38 +118,26 @@
 </head>
 <body>
 <div class="header">
-<h2>1) Online Bus Ticket Booking System</h2>
 </div>
+  
+<h1> Library Management System</h1>
 <div>
-    <img src="/Images/post1.PNG" alt="Projects" title="Optional title attribute" width="200"/>
-    <img src="/Images/post2.PNG" alt="Projects" title="Optional title attribute" width="200"/>
-    <img src="/Images/post3.PNG" alt="Projects" title="Optional title attribute" width="200"/>
-    <img src="/Images/post4.PNG" alt="Projects" title="Optional title attribute" width="200"/>
-    <img src="/Images/post6.PNG" alt="Projects" title="Optional title attribute" width="200"/>
-    <img src="/Images/post8.PNG" alt="Projects" title="Optional title attribute" width="200"/>
+    <img src="/Images/hulu1.PNG" alt="Projects" title="Optional title attribute" width="200"/>
+</div>
+  <div>
+    <img src="/Images/pro1.PNG" alt="Projects" title="Optional title attribute" width="200"/>
+  </div>
+  <div>
+    <img src="/Images/pro2.PNG" alt="Projects" title="Optional title attribute" width="200"/>
 </div>
 
-<h2>2) Library Management System</h2>
-<div>
-    <img src="/Images/user registration.PNG" alt="Projects" title="Optional title attribute" width="200"/>
-    <img src="/Images/User log in page.PNG" alt="Projects" title="Optional title attribute" width="200"/>
-    <img src="/Images/Delete Book.PNG" alt="Projects" title="Optional title attribute" width="200"/>
-    <img src="/Images/Adminfirstpage.PNG" alt="Projects" title="Optional title attribute" width="200"/>
-    <img src="/Images/Admin second page.PNG" alt="Projects" title="Optional title attribute" width="200"/>
-    <img src="/Images/Add book.PNG" alt="Projects" title="Optional title attribute" width="200"/>
-    <img src="/Images/View book.PNG" alt="Projects" title="Optional title attribute" width="200"/>
-    <img src="/Images/View book page.PNG" alt="Projects" title="Optional title attribute" width="200"/>
-    <img src="/Images/Update Book.PNG" alt="Projects" title="Optional title attribute" width="200"/>
-    <img src="/Images/Homepage.PNG" alt="Projects" title="Optional title attribute" width="200"/>
-</div>
 
-<h2>3) Animal Card</h2>
+
 <!-- Assuming you have images for Animal Card -->
 <div>
     <!-- Image tags for Animal Card, similar to above -->
 </div>
 
-<h2>4) Animal Card</h2>
 <!-- Assuming you have images for the second Animal Card section -->
 <div>
     <!-- Image tags for the second Animal Card, similar to above -->
