--- a/projects.html
+++ b/projects.html
@@ -120,16 +120,33 @@
 <div class="header">
 </div>
   
-<h1> Library Management System</h1>
-<div>
-    <img src="/Images/hulu1.PNG" alt="Projects" title="Optional title attribute" width="200"/>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Portfolio</title>
+</head>
+<body>
+
+<h1 style="text-align:center;"> Hulu Bus Ticket Booking System</h1>
+<div style="text-align: center;">
+  <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
+    <img src="/Images/hulu1.PNG" alt="Hulu Bus Ticket Booking System" title="Hulu Bus Ticket Booking System" style="width: 200px; margin: 10px; cursor: pointer; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'"/>
+  </a>
 </div>
-  <div>
-    <img src="/Images/pro1.PNG" alt="Projects" title="Optional title attribute" width="200"/>
-  </div>
-  <div>
-    <img src="/Images/pro2.PNG" alt="Projects" title="Optional title attribute" width="200"/>
+
+<h1 style="text-align:center;"> Library Management System</h1>
+<div style="text-align: center;">
+  <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
+    <img src="/Images/pro2.PNG" alt="Library Management System" title="Library Management System" style="width: 200px; margin: 10px; cursor: pointer; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'"/>
+  </a>
 </div>
+
+<!-- Continue to add more projects in the same format -->
+
+</body>
+</html>
 
 
 
