--- a/projects.html
+++ b/projects.html
@@ -129,6 +129,11 @@
 </head>
 <body>
 
+<h1 style="text-align:center;"> My Recent Workd</h1>
+<p>Here are some of the Projects that I have worked on Recently</p>
+
+  <br></br>
+  <br></br>
 <h1 style="text-align:center;"> Hulu Bus Ticket Booking System</h1>
 <div style="text-align: center;">
   <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
@@ -144,6 +149,10 @@
 </div>
 
 <!-- Continue to add more projects in the same format -->
+
+
+
+  <br></br>
 <div style="text-align: center;">
   <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
     <img src="/Images/pro1.PNG" alt="Library Management System" title="" style="width: 400px; margin: 10px; cursor: pointer; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'"/>
