--- a/Home.html
+++ b/Home.html
@@ -148,9 +148,28 @@ document.addEventListener("DOMContentLoaded", function() {
 
   
     </script>
+  
+<div class="social-footer">
+  <p class="connect">FIND ME ON</p>
+  <p>Feel free to connect with me</p>
+  <div class="social-icons">
+    <a href="https://github.com/woletee" target="_blank" class="icon">
+      <img src="/Images/ic2.png" alt="GitHub">
+    </a>
+    <a href="https://github.com/woletee" target="_blank" class="icon">
+      <img src="/Images/ic3" alt="Twitter">
+    </a>
+    <a href="https://github.com/woletee" target="_blank" class="icon">
+      <img src="/Images/ic4.png" alt="LinkedIn">
+    </a>
+    <a href="https://github.com/woletee" target="_blank" class="icon">
+      <img src="/Images/ic5.png" alt="Instagram">
+    </a>
+  </div>
+</div>
+
 </body>
 </html>
-
 
 
 
