--- a/Home.html
+++ b/Home.html
@@ -154,10 +154,10 @@ document.addEventListener("DOMContentLoaded", function() {
   <p>Feel free to connect with me</p>
   <div class="social-icons">
     <a href="https://github.com/woletee" target="_blank" class="icon">
-      <img src="/Images/ic2.png" alt="GitHub">
+      <img src="/Images/ic1.jpg" alt="GitHub">
     </a>
     <a href="https://github.com/woletee" target="_blank" class="icon">
-      <img src="/Images/ic3" alt="Twitter">
+      <img src="/Images/ic3.png" alt="Twitter">
     </a>
     <a href="https://github.com/woletee" target="_blank" class="icon">
       <img src="/Images/ic4.png" alt="LinkedIn">
