--- a/Home.html
+++ b/Home.html
@@ -115,6 +115,50 @@
     display: flex; /* Aligns children spans horizontally */
     flex-direction: column; /* Stacks children spans vertically */
 }
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
+.social-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #2c2f33;
+  color: white;
+}
+
+.footer-content {
+  text-align: center;
+}
+
+.connect {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.social-icons {
+  margin-top: 20px;
+}
+
+.icon img {
+  height: 40px; /* Adjust as necessary */
+  width: 40px; /* Adjust as necessary */
+  margin: 0 10px;
+}
+
+.icon {
+  display: inline-block;
+  text-decoration: none;
+}
+
+.icon:hover {
+  opacity: 0.7;
+}
 
     </style>
 </head>
@@ -149,24 +193,31 @@ document.addEventListener("DOMContentLoaded", function() {
   
     </script>
   
+
+
 <div class="social-footer">
-  <p class="connect">FIND ME ON</p>
-  <p>Feel free to connect with me</p>
-  <div class="social-icons">
-    <a href="https://github.com/woletee" target="_blank" class="icon">
-      <img src="/Images/ic1.jpg" alt="GitHub">
-    </a>
-    <a href="https://github.com/woletee" target="_blank" class="icon">
-      <img src="/Images/ic3.png" alt="Twitter">
-    </a>
-    <a href="https://github.com/woletee" target="_blank" class="icon">
-      <img src="/Images/ic4.png" alt="LinkedIn">
-    </a>
-    <a href="https://github.com/woletee" target="_blank" class="icon">
-      <img src="/Images/ic5.png" alt="Instagram">
-    </a>
+  <div class="footer-content">
+    <p class="connect">FIND ME ON</p>
+    <p>Feel free to connect with me</p>
+    <div class="social-icons">
+      <a href="https://github.com/woletee" target="_blank" class="icon">
+        <img src="/Images/ic1.jpg" alt="GitHub">
+      </a>
+      <a href="https://twitter.com/woletee" target="_blank" class="icon"> <!-- Assuming this is your Twitter link -->
+        <img src="/Images/ic3.png" alt="Twitter">
+      </a>
+      <a href="https://linkedin.com/in/woletee" target="_blank" class="icon"> <!-- Assuming this is your LinkedIn link -->
+        <img src="/Images/ic4.png" alt="LinkedIn">
+      </a>
+      <a href="https://instagram.com/woletee" target="_blank" class="icon"> <!-- Assuming this is your Instagram link -->
+        <img src="/Images/ic5.png" alt="Instagram">
+      </a>
+    </div>
   </div>
 </div>
+
+
+  
 
 </body>
 </html>
