--- a/Home.html
+++ b/Home.html
@@ -201,7 +201,7 @@ document.addEventListener("DOMContentLoaded", function() {
     <p>Feel free to connect with me</p>
     <div class="social-icons">
       <a href="https://github.com/woletee" target="_blank" class="icon">
-        <img src="/Images/ic1.jpg" alt="GitHub">
+        <img src="/Images/giti.png" alt="GitHub">
       </a>
       <a href="https://twitter.com/woletee" target="_blank" class="icon"> <!-- Assuming this is your Twitter link -->
         <img src="/Images/ic3.png" alt="Twitter">
