--- a/Study.html
+++ b/Study.html
@@ -1,1 +1,2 @@
+<a href="https://www.notion.so/Reinforcement-Learning-Sutton-and-Barto-4be04ae89d3f460f898af0eb8f528950" target="_blank">Click here to open Example.com in a new tab</a>
 
