--- a/Home.html
+++ b/Home.html
@@ -86,7 +86,7 @@
   <a href="projects.html"><i class="fas fa-briefcase"></i>Projects</a>
   <a href="https://github.com/woletee" target="_blank"><i class="fab fa-github"></i> GitHub</a>
   <a href="Cv.pdf" target="_blank"><i class="fas fa-file-alt"></i>Resume</a>
-  <a href="Blogs.html"><i class="fas fa-blog"></i>Blogs</a>
+  <a href="https://www.notion.so/Reinforcement-Learning-Sutton-and-Barto-4be04ae89d3f460f898af0eb8f528950"><i class="fas fa-blog"></i>Study</a>
 </div>
 
 <div class="header" id="home">
