--- a/Home.html
+++ b/Home.html
@@ -97,7 +97,7 @@
   <div id="wordContainer"></div>
     <script>
 document.addEventListener("DOMContentLoaded", function() {
-    const words = ["Artificial Intelligence Researcher at GIST", "Web developer","Content Creator"];
+    const words = ["Artificial Intelligence Researcher at GIST", "Web developer","Content Creator","Sketcher"];
     const container = document.getElementById("wordContainer");
     let wordIndex = 0;
     let letterIndex = 0;
