--- a/About.html
+++ b/About.html
@@ -96,9 +96,11 @@
       I'm an Artificial Intelligence Master's student at Gwangju Institute of Science and Technology (GIST), South Korea.</p>
       <p style="font-size: 1.4em; margin-top: 2em; color: #FFFFFF;">Apart from coding, what do I enjoy?</p>
       <ul style="list-style-type: none; padding: 0;">
+        <li style="font-size: 1.2em; padding: 0.2em 0; color: #FFFFFF;">🎨 Sketching</li> 
         <li style="font-size: 1.2em; padding: 0.2em 0; color: #FFFFFF;">✍️ Writing</li>
-        <li style="font-size: 1.2em; padding: 0.2em 0; color: #FFFFFF;">🏀 Playing Basketball</li>
         <li style="font-size: 1.2em; padding: 0.2em 0; color: #FFFFFF;">🌍 Travelling</li>
+        <li style="font-size: 1.2em; padding: 0.2em 0; color: #FFFFFF;">🏀 Playing Basketball</li>
+        
       </ul>
       <blockquote style="font-style: italic; margin: 2em 0; color: #DDA0DD;">
         "What you need to learn isn't how to make everything easy; but what to do when something is hard"<br>
