--- a/About.html
+++ b/About.html
@@ -113,31 +113,33 @@
   </div>
 <div ">
   <!-- Professional Skills Section -->
-  <div >
+<div>
     <h1>Professional Skills Used</h1>
-    <div class="skill">
-      <div class="icon">🔤</div> JS
+    <div style="display: flex; flex-wrap: wrap; gap: 20px;">
+        <div class="skill" style="display: flex; align-items: center;">
+            <div class="icon">🔤</div> JS
+        </div>
+        <div class="skill" style="display: flex; align-items: center;">
+            <div class="icon">🟢</div> Node.js
+        </div>
+        <div class="skill" style="display: flex; align-items: center;">
+            <div class="icon">⚛️</div> React
+        </div>
+        <div class="skill" style="display: flex; align-items: center;">
+            <div class="icon">🔥</div> Flask
+        </div>
+        <div class="skill" style="display: flex; align-items: center;">
+            <div class="icon">🔗</div> GraphQL
+        </div>
+        <div class="skill" style="display: flex; align-items: center;">
+            <div class="icon">🐍</div> Django
+        </div>
+        <div class="skill" style="display: flex; align-items: center;">
+            <div class="icon">🐍</div> Python
+        </div>
     </div>
-    <div class="skill">
-      <div class="icon">🟢</div> Node.js
-    </div>
-    <div class="skill">
-      <div class="icon">⚛️</div> React
-    </div>
-    <div class="skill">
-      <div class="icon">🔥</div> Flask
-    </div>
-    <div class="skill">
-      <div class="icon">🔗</div> GraphQL
-    </div>
-    <div class="skill">
-      <div class="icon">🐍</div> Django
-    </div>
-    <div class="skill">
-      <div class="icon">🐍</div> Python
-    </div>
-    <br>
-  </div>
+</div>
+
 
   <!-- Tools Section -->
   <div>
