--- a/projects.html
+++ b/projects.html
@@ -15,9 +15,9 @@
     color: white;
     margin: 0;
     padding: 0;
-    background-image: url('https://th.bing.com/th/id/OIP.CDFwWuwNv27fcHTIa4H1tgHaE7?w=252&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7'); /* Replace with your image URL */
-    background-size: cover; /* This will make sure your image covers the whole page */
-    background-repeat: no-repeat; /* This will prevent the image from repeating */
+    background-image: url('https://th.bing.com/th/id/OIP.CDFwWuwNv27fcHTIa4H1tgHaE7?w=252&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7'); 
+    background-size: cover; 
+    background-repeat: no-repeat; 
     background-size: cover;
     background-repeat: no-repeat;
    
@@ -46,14 +46,14 @@
     display: flex;
     align-items: center;
     padding: 2em;
-    text-align: left; /* Align text to the left */
+    text-align: left; 
   }
   .header img {
-    max-width: 100px; /* Adjust the size as needed */
-    margin-right: 20px; /* Space between image and text */
+    max-width: 100px; 
+    margin-right: 20px; 
   }
   .header .greeting {
-    margin-right: auto; /* Push everything else to the right */
+    margin-right: auto; 
   }
   .header h1 {
     font-size: 2.5em;
@@ -111,7 +111,7 @@
             background-size: cover;
         }
   h2 {
-  color: #FFFFFF; /* Replace with the color you want, e.g., white */
+  color: #FFFFFF; 
 
 }
 
@@ -149,8 +149,6 @@
   </a>
 </div>
 
-<!-- Continue to add more projects in the same format -->
-
 
 
   <br></br>
@@ -161,17 +159,10 @@
 </div>
 </body>
 </html>
-
-
-
-<!-- Assuming you have images for Animal Card -->
 <div>
-    <!-- Image tags for Animal Card, similar to above -->
 </div>
-
-<!-- Assuming you have images for the second Animal Card section -->
 <div>
-    <!-- Image tags for the second Animal Card, similar to above -->
+    
 </div>
 </body>
 </html>
