--- a/About.html
+++ b/About.html
@@ -153,6 +153,26 @@
       <div class="icon"></div> Zeplin
     </div>
   </div>
+  <div class="social-footer">
+  <div class="footer-content">
+    <p class="connect">FIND ME ON</p>
+    <p>Feel free to connect with me</p>
+    <div class="social-icons">
+      <a href="https://github.com/woletee" target="_blank" class="icon">
+        <img src="/Images/giti.png" alt="GitHub">
+      </a>
+      <a href="https://twitter.com/woletee" target="_blank" class="icon">
+        <img src="/Images/ic3.png" alt="Twitter">
+      </a>
+      <a href="https://linkedin.com/in/woletee" target="_blank" class="icon"> 
+        <img src="/Images/ic4.png" alt="LinkedIn">
+      </a>
+      <a href="https://instagram.com/woletee" target="_blank" class="icon"> 
+        <img src="/Images/ic5.png" alt="Instagram">
+      </a>
+    </div>
+  </div>
+</div>
 </div>
 
 </div>
