--- a/About.html
+++ b/About.html
@@ -153,7 +153,81 @@
       <div class="icon"></div> Zeplin
     </div>
   </div>
-  <div class="social-footer">
+
+
+  
+</div>
+
+</div>
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Letter by Letter Display</title>
+    <style>
+        #wordContainer {
+            font-size: 24px;
+            font-family: Arial, sans-serif;
+        }
+      #wordContainer {
+    font-size: 24px;
+    font-family: Arial, sans-serif;
+    display: flex; 
+    flex-direction: column; 
+}
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
+.social-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #2c2f33;
+  color: white;
+}
+
+.footer-content {
+  text-align: center;
+}
+
+.connect {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.social-icons {
+  margin-top: 20px;
+}
+
+.icon img {
+  height: 40px; /* Adjust as necessary */
+  width: 40px; /* Adjust as necessary */
+  margin: 0 10px;
+}
+
+.icon {
+  display: inline-block;
+  text-decoration: none;
+}
+
+.icon:hover {
+  opacity: 0.7;
+}
+
+    </style>
+</head>
+<body>
+  
+
+
+<div class="social-footer">
   <div class="footer-content">
     <p class="connect">FIND ME ON</p>
     <p>Feel free to connect with me</p>
@@ -173,9 +247,13 @@
     </div>
   </div>
 </div>
-</div>
 
-</div>
+
+  
+
+</body>
+</html>
+
 
 </body>
 </html>
