--- a/About.html
+++ b/About.html
@@ -125,16 +125,16 @@
             <div class="icon">⚛️</div> React
         </div>
         <div class="skill" style="display: flex; align-items: center;">
-            <div class="icon">🔥</div> Flask
+            <div class="icon">🔥</div> PHP
         </div>
         <div class="skill" style="display: flex; align-items: center;">
-            <div class="icon">🔗</div> GraphQL
-        </div>
-        <div class="skill" style="display: flex; align-items: center;">
-            <div class="icon">🐍</div> Django
+            <div class="icon">🔗</div> SQL
         </div>
         <div class="skill" style="display: flex; align-items: center;">
             <div class="icon">🐍</div> Python
+        </div>
+        <div class="skill" style="display: flex; align-items: center;">
+            <div class="icon">🐍</div> Pytorch
         </div>
     </div>
 </div>
@@ -144,10 +144,13 @@
   <div>
     <h1>Tools I Used</h1>
     <div class="skill">
-      <div class="icon">🐍</div> VS Code
+      <div class="icon">🔵</div> VS Code
     </div>
     <div class="skill">
-      <div class="icon">🐍</div> Postman
+      <div class="icon">🔵</div> Postman
+    </div>
+     <div class="skill">
+      <div class="icon">🔵</div> Zeplin
     </div>
    
   </div>
