--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ body, html {
       <a href="https://linkedin.com/in/woletee" target="_blank" class="icon"> 
         <img src="/Images/ic4.png" alt="LinkedIn">
       </a>
-      <a href="https://instagram.com/woletee" target="_blank" class="icon"> 
+      <a href="https://www.instagram.com/w._maryam?igsh=MTdmcGV4bWI5anB4cQ==" target="_blank" class="icon"> 
         <img src="/Images/ic5.png" alt="Instagram">
       </a>
     </div>
