--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ body, html {
       <a href="https://github.com/woletee" target="_blank" class="icon">
         <img src="/Images/giti.png" alt="GitHub">
       </a>
-      <a href="https://twitter.com/woletee" target="_blank" class="icon">
+      <a href="https://www.instagram.com/w._maryam?igsh=MTdmcGV4bWI5anB4cQ==" target="_blank" class="icon">
         <img src="/Images/ic3.png" alt="Twitter">
       </a>
       <a href="https://linkedin.com/in/woletee" target="_blank" class="icon"> 
