--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,22 +9,18 @@
 <style>
   body {
     font-family: 'Arial', sans-serif;
- 
     color: white;
     margin: 0;
     padding: 0;
     background-image: url('https://th.bing.com/th/id/OIP.CDFwWuwNv27fcHTIa4H1tgHaE7?w=252&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7'); 
-    background-size: cover; 
-    background-repeat: no-repeat; 
     background-size: cover;
     background-repeat: no-repeat;
-   
   }
   .navbar {
     display: flex;
-    justify-content: flex-end; /* Align nav items to the right */
+    justify-content: flex-end;
     padding: 1em;
-    background-color: #333;
+    background-color: rgba(51, 51, 51, 0.8);
   }
   .navbar a {
     color: white;
@@ -35,11 +29,11 @@
     display: flex;
     align-items: center;
     border: 2px solid transparent;
+    transition: color 0.3s, border-color 0.3s;
   }
   .navbar a:hover {
-    color: #f0f0f0;
+    color: #ff00ff;
     text-decoration: underline;
-    text-decoration-color: #ff00ff;
     border-color: #ff00ff;
   }
   .header {
@@ -49,7 +43,7 @@
     text-align: left; 
   }
   .header img {
-    max-width: 100px; 
+    max-width: 100px;
     margin-right: 20px; 
   }
   .header .greeting {
@@ -76,93 +70,79 @@
   .footer {
     text-align: center;
     padding: 1em;
-    background-color: #333;
+    background-color: rgba(51, 51, 51, 0.8);
   }
-
+  .content {
+    text-align: center;
+    padding: 2em;
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+  .content h1, .content p {
+    margin: 0.5em 0;
+  }
+  .project {
+    margin: 2em 0;
+  }
+  .project img {
+    width: 80%;
+    max-width: 400px;
+    margin: 10px;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  .project img:hover {
+    transform: scale(1.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  }
 </style>
 </head>
 <body>
 <div class="navbar">
-  <a href="Home.html"><i class="fas fa-home"></i>home</a>
-  <a href="About.html"><i class="fas fa-user"></i>About</a>
-  <a href="projects.html"><i class="fas fa-briefcase"></i>Projects</a>
+  <a href="Home.html"><i class="fas fa-home"></i> Home</a>
+  <a href="About.html"><i class="fas fa-user"></i> About</a>
+  <a href="projects.html"><i class="fas fa-briefcase"></i> Projects</a>
   <a href="https://github.com/woletee" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-  <a href="Cv.pdf" target="_blank"><i class="fas fa-file-alt"></i>Resume</a>
- <a href="https://www.notion.so/Reinforcement-Learning-Sutton-and-Barto-4be04ae89d3f460f898af0eb8f528950"><i class="fas fa-blog"></i>Study</a>
-
+  <a href="Cv.pdf" target="_blank"><i class="fas fa-file-alt"></i> Resume</a>
+  <a href="https://www.notion.so/Reinforcement-Learning-Sutton-and-Barto-4be04ae89d3f460f898af0eb8f528950"><i class="fas fa-blog"></i> Study</a>
 </div>
 
 <div class="header" id="home">
-  
- 
-
-<!-- Additional sections for About, Projects, Resume, and Blogs would go here -->
-
-</body>
-</html>
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Your Page Title</title>
-    <style>
-        body {
-            background-image: url('https://th.bing.com/th/id/OIP.CDFwWuwNv27fcHTIa4H1tgHaE7?w=252&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7');
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-  h2 {
-  color: #FFFFFF; 
-
-}
-
-    </style>
-</head>
-<body>
-<div class="header">
-</div>
-  
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Portfolio</title>
-</head>
-<body>
-
-<h1 style="text-align:center;"> My Recent Workd</h1>
-<p>Here are some of the Projects that I have worked on Recently</p>
-
-  <br></br>
-  <br></br>
-<h1 style="text-align:center;"> Hulu Bus Ticket Booking System</h1>
-<div style="text-align: center;">
-  <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
-    <img src="/Images/hulu1.PNG" alt="Hulu Bus Ticket Booking System" title="Hulu Bus Ticket Booking System" style="width: 400px; margin: 10px; cursor: pointer; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'"/>
-  </a>
+  <img src="profile.jpg" alt="Profile Picture">
+  <div class="greeting">
+    <h1>Welcome to My Portfolio</h1>
+    <p>Discover my projects and skills.</p>
+    <a href="#projects" class="cta">View Projects</a>
+  </div>
 </div>
 
-<h1 style="text-align:center;"> Library Management System</h1>
-<div style="text-align: center;">
-  <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
-    <img src="/Images/pro2.PNG" alt="Library Management System" title="Library Management System" style="width: 400px; margin: 10px; cursor: pointer; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'"/>
-  </a>
+<div class="content" id="projects">
+  <h1>My Recent Work</h1>
+  <p>Here are some of the projects that I have worked on recently:</p>
+
+  <div class="project">
+    <h2>Hulu Bus Ticket Booking System</h2>
+    <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
+      <img src="/Images/hulu1.PNG" alt="Hulu Bus Ticket Booking System" title="Hulu Bus Ticket Booking System">
+    </a>
+  </div>
+
+  <div class="project">
+    <h2>Library Management System</h2>
+    <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
+      <img src="/Images/pro2.PNG" alt="Library Management System" title="Library Management System">
+    </a>
+  </div>
+
+  <div class="project">
+    <h2>Another Project</h2>
+    <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
+      <img src="/Images/pro1.PNG" alt="Another Project" title="Another Project">
+    </a>
+  </div>
 </div>
 
-
-
-  <br></br>
-<div style="text-align: center;">
-  <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
-    <img src="/Images/pro1.PNG" alt="Library Management System" title="" style="width: 400px; margin: 10px; cursor: pointer; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'"/>
-  </a>
-</div>
-</body>
-</html>
-<div>
-</div>
-<div>
-    
+<div class="footer">
+  <p>&copy; 2024 Your Name. All rights reserved.</p>
 </div>
 </body>
 </html>
