--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
     color: white;
     margin: 0;
     padding: 0;
-    background-image: url('https://th.bing.com/th/id/OIP.CDFwWuwNv27fcHTIa4H1tgHaE7?w=252&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7'); 
+    background-image: url('https://th.bing.com/th/id/OIP.CDFwWuwNv27fcHTIa4H1tgHaE7?w=252&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7');
     background-size: cover;
     background-repeat: no-repeat;
   }
@@ -40,14 +40,14 @@
     display: flex;
     align-items: center;
     padding: 2em;
-    text-align: left; 
+    text-align: left;
   }
   .header img {
     max-width: 100px;
-    margin-right: 20px; 
+    margin-right: 20px;
   }
   .header .greeting {
-    margin-right: auto; 
+    margin-right: auto;
   }
   .header h1 {
     font-size: 2.5em;
@@ -80,19 +80,32 @@
   .content h1, .content p {
     margin: 0.5em 0;
   }
+  .projects {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2em;
+  }
   .project {
-    margin: 2em 0;
+    flex: 1 1 calc(45% - 2em);
+    max-width: calc(45% - 2em);
+    background-color: rgba(51, 51, 51, 0.8);
+    padding: 1em;
+    border-radius: 10px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  .project:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   }
   .project img {
-    width: 80%;
-    max-width: 400px;
-    margin: 10px;
+    width: 100%;
+    margin: 10px 0;
     cursor: pointer;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    transition: transform 0.3s ease;
   }
   .project img:hover {
     transform: scale(1.1);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   }
 </style>
 </head>
@@ -107,7 +120,6 @@
 </div>
 
 <div class="header" id="home">
-  <img src="profile.jpg" alt="Profile Picture">
   <div class="greeting">
     <h1>Welcome to My Portfolio</h1>
     <p>Discover my projects and skills.</p>
@@ -119,25 +131,34 @@
   <h1>My Recent Work</h1>
   <p>Here are some of the projects that I have worked on recently:</p>
 
-  <div class="project">
-    <h2>Hulu Bus Ticket Booking System</h2>
-    <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
-      <img src="/Images/hulu1.PNG" alt="Hulu Bus Ticket Booking System" title="Hulu Bus Ticket Booking System">
-    </a>
-  </div>
+  <div class="projects">
+    <div class="project">
+      <h2>Hulu Bus Ticket Booking System</h2>
+      <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
+        <img src="/Images/hulu1.PNG" alt="Hulu Bus Ticket Booking System" title="Hulu Bus Ticket Booking System">
+      </a>
+    </div>
 
-  <div class="project">
-    <h2>Library Management System</h2>
-    <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
-      <img src="/Images/pro2.PNG" alt="Library Management System" title="Library Management System">
-    </a>
-  </div>
+    <div class="project">
+      <h2>Library Management System</h2>
+      <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
+        <img src="/Images/pro2.PNG" alt="Library Management System" title="Library Management System">
+      </a>
+    </div>
 
-  <div class="project">
-    <h2>Another Project</h2>
-    <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
-      <img src="/Images/pro1.PNG" alt="Another Project" title="Another Project">
-    </a>
+    <div class="project">
+      <h2>Another Project</h2>
+      <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
+        <img src="/Images/pro1.PNG" alt="Another Project" title="Another Project">
+      </a>
+    </div>
+
+    <div class="project">
+      <h2>Yet Another Project</h2>
+      <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
+        <img src="/Images/pro3.PNG" alt="Yet Another Project" title="Yet Another Project">
+      </a>
+    </div>
   </div>
 </div>
 
