--- a/projects.html
+++ b/projects.html
@@ -130,8 +130,20 @@
 <div class="content" id="projects">
   <h1>My Recent Work</h1>
   <p>Here are some of the projects that I have worked on recently:</p>
-
+  
   <div class="projects">
+       <div class="project">
+      <h2>Trip Recommendation System</h2>
+      <a href="URL_WHERE_IMAGE" target="_blank">
+        <img src="/Images/Untitled (1).png" alt="Another Project" title="Trip Recommendation System">
+      </a>
+    </div>
+  <div class="project">
+      <h2>Korean Food Detection</h2>
+      <a href="URL_WHERE_IMAGE" target="_blank">
+        <img src="/Images/foddo.png" alt="Another Project" title="Korean Food Detection">
+      </a>
+    </div>
     <div class="project">
       <h2>Hulu Bus Ticket Booking System</h2>
       <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
@@ -146,24 +158,13 @@
       </a>
     </div>
 
-    <div class="project">
-      <h2>Another Project</h2>
-      <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
-        <img src="/Images/pro1.PNG" alt="Another Project" title="Another Project">
-      </a>
-    </div>
 
-    <div class="project">
-      <h2>Yet Another Project</h2>
-      <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
-        <img src="/Images/pro3.PNG" alt="Yet Another Project" title="Yet Another Project">
-      </a>
-    </div>
+  
   </div>
 </div>
 
 <div class="footer">
-  <p>&copy; 2024 Your Name. All rights reserved.</p>
+  <p>&copy; 2024 Mary.Liyew. All rights reserved.</p>
 </div>
 </body>
 </html>
