--- a/projects.html
+++ b/projects.html
@@ -141,7 +141,7 @@
   <div class="project">
       <h2>Korean Food Detection</h2>
       <a href="URL_WHERE_IMAGE" target="_blank">
-        <img src="/Images/foddo.png" alt="Another Project" title="Korean Food Detection">
+        <img src="/Images/fodod.png" alt="Another Project" title="Korean Food Detection">
       </a>
     </div>
     <div class="project">
