--- a/projects.html
+++ b/projects.html
@@ -134,13 +134,13 @@
   <div class="projects">
        <div class="project">
       <h2>Trip Recommendation System</h2>
-      <a href="URL_WHERE_IMAGE" target="_blank">
+      <a href="https://github.com/woletee/TRIP_Recommendation" target="_blank">
         <img src="/Images/Untitled (1).png" alt="Another Project" title="Trip Recommendation System">
       </a>
     </div>
   <div class="project">
       <h2>Korean Food Detection</h2>
-      <a href="URL_WHERE_IMAGE" target="_blank">
+      <a href="https://github.com/woletee/korean_food_detection" target="_blank">
         <img src="/Images/fodod.png" alt="Another Project" title="Korean Food Detection">
       </a>
     </div>
