--- a/projects.html
+++ b/projects.html
@@ -132,12 +132,15 @@
   <p>Here are some of the projects that I have worked on recently:</p>
   
   <div class="projects">
-       <div class="project">
-      <h2>Trip Recommendation System</h2>
-      <a href="https://github.com/woletee/TRIP_Recommendation" target="_blank">
-        <img src="/Images/Untitled (1).png" alt="Another Project" title="Trip Recommendation System">
-      </a>
+    <div class="projects">
+    <div class="project">
+        <h2>Trip Recommendation System</h2>
+        <a href="https://github.com/woletee/TRIP_Recommendation" target="_blank">
+            <img src="/Images/Untitled (1).png" alt="Trip Recommendation System" title="Trip Recommendation System">
+        </a>
     </div>
+</div>
+
   <div class="project">
       <h2>Korean Food Detection</h2>
       <a href="https://github.com/woletee/korean_food_detection" target="_blank">
