--- a/projects.html
+++ b/projects.html
@@ -148,14 +148,14 @@
     </div>
     <div class="project">
       <h2>Hulu Bus Ticket Booking System</h2>
-      <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
+      <a href="https://github.com/woletee/Simple-Bus-Ticket-Booking-System" target="_blank">
         <img src="/Images/hulu1.PNG" alt="Hulu Bus Ticket Booking System" title="Hulu Bus Ticket Booking System">
       </a>
     </div>
 
     <div class="project">
       <h2>Library Management System</h2>
-      <a href="URL_WHERE_IMAGE_LEADS_TO" target="_blank">
+      <a href="https://github.com/woletee/Library-Management-System" target="_blank">
         <img src="/Images/pro2.PNG" alt="Library Management System" title="Library Management System">
       </a>
     </div>
