--- a/About.html
+++ b/About.html
@@ -82,7 +82,7 @@
   <a href="About.html"><i class="fas fa-user"></i> About</a>
   <a href="projects.html"><i class="fas fa-briefcase"></i> Projects</a>
   <a href="https://github.com/woletee" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-  <a href="Cv.pdf" target="_blank"><i class="fas fa-file-alt"></i> Resume</a>
+  <a href="Cv1.pdf" target="_blank"><i class="fas fa-file-alt"></i> Resume</a>
   <a href="https://www.notion.so/Reinforcement-Learning-Sutton-and-Barto-4be04ae89d3f460f898af0eb8f528950"><i class="fas fa-blog"></i>Study</a>
 
 </div>
