--- a/Home.html
+++ b/Home.html
@@ -208,10 +208,10 @@ body, html {
       <a href="https://twitter.com/woletee" target="_blank" class="icon"> 
         <img src="/Images/ic3.png" alt="Twitter">
       </a>
-      <a href="https://linkedin.com/in/woletee" target="_blank" class="icon"> 
+      <a href="https://www.linkedin.com/feed/" target="_blank" class="icon"> 
         <img src="/Images/ic4.png" alt="LinkedIn">
       </a>
-      <a href="https://instagram.com/woletee" target="_blank" class="icon"> 
+      <a href="https://www.instagram.com/w._maryam/" target="_blank" class="icon"> 
         <img src="/Images/ic5.png" alt="Instagram">
       </a>
     </div>
