--- a/index.html
+++ b/index.html
@@ -206,14 +206,14 @@ body, html {
       <a href="https://github.com/woletee" target="_blank" class="icon">
         <img src="/Images/giti.png" alt="GitHub">
       </a>
-      <a href="https://www.instagram.com/w._maryam?igsh=MTdmcGV4bWI5anB4cQ==" target="_blank" class="icon">
-        <img src="/Images/ic3.png" alt="Twitter">
+      <a href="https://twitter.com/woletee" target="_blank" class="icon"> 
+        <img src="/Images/ic4.png" alt="Twitter">
       </a>
-      <a href="https://linkedin.com/in/woletee" target="_blank" class="icon"> 
-        <img src="/Images/ic4.png" alt="LinkedIn">
+      <a href="https://www.linkedin.com/feed/" target="_blank" class="icon"> 
+        <img src="/Images/ic5.png" alt="LinkedIn">
       </a>
-      <a href="https://www.instagram.com/w._maryam?igsh=MTdmcGV4bWI5anB4cQ==" target="_blank" class="icon"> 
-        <img src="/Images/ic5.png" alt="Instagram">
+      <a href="https://www.instagram.com/w._maryam/" target="_blank" class="icon"> 
+        <img src="/Images/ic3.png" alt="Instagram">
       </a>
     </div>
   </div>
