--- a/Publication.html
+++ b/Publication.html
@@ -1,1 +1,240 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Portfolio</title>
+<!-- Include Font Awesome CDN for icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+<style>
+  body {
+    font-family: 'Arial', sans-serif;
+ 
+    color: white;
+    margin: 0;
+    padding: 0;
+    background-image: url('https://th.bing.com/th/id/OIP.CDFwWuwNv27fcHTIa4H1tgHaE7?w=252&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7'); 
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    background-size: cover;
+    background-repeat: no-repeat;
+   
+  }
+  .navbar {
+    display: flex;
+    justify-content: flex-end; 
+    padding: 1em;
+    background-color: #333;
+  }
+  .navbar a {
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+    border: 2px solid transparent;
+  }
+  .navbar a:hover {
+    color: #f0f0f0;
+    text-decoration: underline;
+    text-decoration-color: #ff00ff;
+    border-color: #ff00ff;
+  }
+  .header {
+    display: flex;
+    align-items: center;
+    padding: 2em;
+    text-align: left; 
+  }
+  .header img {
+    max-width: 100px; 
+    margin-right: 20px; 
+  }
+  .header .greeting {
+    margin-right: auto; 
+  }
+  .header h1 {
+    font-size: 2.5em;
+    transition: transform 0.3s ease;
+  }
+  .header h1:hover {
+    transform: scale(1.1);
+  }
+  .cta {
+    text-decoration: none;
+    background-color: purple;
+    color: white;
+    padding: 1em 2em;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+  .cta:hover {
+    background-color: #6f42c1;
+  }
+  .footer {
+    text-align: center;
+    padding: 1em;
+    background-color: #333;
+  }
 
+</style>
+</head>
+<body>
+<div class="navbar">
+  <a href="Home.html"><i class="fas fa-home"></i>home</a>
+  <a href="About.html"><i class="fas fa-user"></i>About</a>
+  <a href="projects.html"><i class="fas fa-briefcase"></i>Projects</a>
+  <a href="https://github.com/woletee" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+  <a href="Cv1.pdf" target="_blank"><i class="fas fa-file-alt"></i>Resume</a>
+   <a href="Publication.html" target="_blank"><i class="fas fa-file-alt"></i>Publication.html</a>
+  
+  <a href="https://www.notion.so/Reinforcement-Learning-Sutton-and-Barto-4be04ae89d3f460f898af0eb8f528950"><i class="fas fa-blog"></i>Study</a>
+</div>
+
+<div class="header" id="home">
+ <img src="/Images/im1.png" alt="Projects" title="Optional title attribute" style="order: 2; margin-left: 80px; max-width: 400px;" />
+
+  <h1 class="greeting">Hi there! <span class="wave">👋</span></h1>
+  <h1 class="greeting">   I'm W.Maryam LIYEW<span class="wave"></span></h1>
+  <div id="wordContainer"></div>
+    <script>
+document.addEventListener("DOMContentLoaded", function() {
+    const words = ["Artificial Intelligence Ms Student at GIST", "Web developer","Content Creator","Sketcher"];
+    const container = document.getElementById("wordContainer");
+    let wordIndex = 0;
+    let letterIndex = 0;
+   function displayLetter() {
+        if (wordIndex < words.length) {
+            if (letterIndex === 0) {
+                container.appendChild(document.createElement('span')); // New span for each word
+            }
+            if (letterIndex < words[wordIndex].length) {
+                container.lastChild.textContent += words[wordIndex][letterIndex++];
+                setTimeout(displayLetter, 100); 
+            } else {
+                wordIndex++;
+                letterIndex = 0;
+                setTimeout(displayLetter, 500); 
+            }
+        }
+    }
+    displayLetter();
+});
+
+  
+    </script>
+</div>
+
+
+ 
+
+  
+
+
+  
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Letter by Letter Display</title>
+    <style>
+        #wordContainer {
+            font-size: 24px;
+            font-family: Arial, sans-serif;
+        }
+      #wordContainer {
+    font-size: 24px;
+    font-family: Arial, sans-serif;
+    display: flex; 
+    flex-direction: column; 
+}
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
+.social-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #2c2f33;
+  color: white;
+}
+
+.footer-content {
+  text-align: center;
+}
+
+.connect {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.social-icons {
+  margin-top: 20px;
+}
+
+.icon img {
+  height: 40px; /* Adjust as necessary */
+  width: 40px; /* Adjust as necessary */
+  margin: 0 10px;
+}
+
+.icon {
+  display: inline-block;
+  text-decoration: none;
+}
+
+.icon:hover {
+  opacity: 0.7;
+}
+
+    </style>
+</head>
+<body>
+  
+
+
+<div class="social-footer">
+  <div class="footer-content">
+    <p class="connect">FIND ME ON</p>
+    <p>Feel free to connect with me</p>
+    <div class="social-icons">
+      <a href="https://github.com/woletee" target="_blank" class="icon">
+        <img src="/Images/giti.png" alt="GitHub">
+      </a>
+      <a href="https://twitter.com/woletee" target="_blank" class="icon"> 
+        <img src="/Images/ic4.png" alt="Twitter">
+      </a>
+      <a href="https://www.linkedin.com/feed/" target="_blank" class="icon"> 
+        <img src="/Images/ic5.png" alt="LinkedIn">
+      </a>
+      <a href="https://www.instagram.com/w._maryam/" target="_blank" class="icon"> 
+        <img src="/Images/ic3.png" alt="Instagram">
+      </a>
+    </div>
+  </div>
+</div>
+
+
+  
+
+</body>
+</html>
+
+
+
+
+
+  
+</div>
+
+<!-- Additional sections for About, Projects, Resume, and Blogs would go here -->
+
+</body>
+</html>
