--- a/Publication.html
+++ b/Publication.html
@@ -9,22 +9,18 @@
 <style>
   body {
     font-family: 'Arial', sans-serif;
- 
     color: white;
     margin: 0;
     padding: 0;
-    background-image: url('https://th.bing.com/th/id/OIP.CDFwWuwNv27fcHTIa4H1tgHaE7?w=252&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7'); 
-    background-size: cover; 
-    background-repeat: no-repeat; 
+    background-image: url('https://th.bing.com/th/id/OIP.CDFwWuwNv27fcHTIa4H1tgHaE7?w=252&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7');
     background-size: cover;
     background-repeat: no-repeat;
-   
   }
   .navbar {
     display: flex;
-    justify-content: flex-end; 
+    justify-content: flex-end;
     padding: 1em;
-    background-color: #333;
+    background-color: rgba(51, 51, 51, 0.8);
   }
   .navbar a {
     color: white;
@@ -33,25 +29,25 @@
     display: flex;
     align-items: center;
     border: 2px solid transparent;
+    transition: color 0.3s, border-color 0.3s;
   }
   .navbar a:hover {
-    color: #f0f0f0;
+    color: #ff00ff;
     text-decoration: underline;
-    text-decoration-color: #ff00ff;
     border-color: #ff00ff;
   }
   .header {
     display: flex;
     align-items: center;
     padding: 2em;
-    text-align: left; 
+    text-align: left;
   }
   .header img {
-    max-width: 100px; 
-    margin-right: 20px; 
+    max-width: 100px;
+    margin-right: 20px;
   }
   .header .greeting {
-    margin-right: auto; 
+    margin-right: auto;
   }
   .header h1 {
     font-size: 2.5em;
@@ -74,167 +70,105 @@
   .footer {
     text-align: center;
     padding: 1em;
-    background-color: #333;
+    background-color: rgba(51, 51, 51, 0.8);
   }
-
+  .content {
+    text-align: center;
+    padding: 2em;
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+  .content h1, .content p {
+    margin: 0.5em 0;
+  }
+  .projects {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2em;
+  }
+  .project {
+    flex: 1 1 calc(45% - 2em);
+    max-width: calc(45% - 2em);
+    background-color: rgba(51, 51, 51, 0.8);
+    padding: 1em;
+    border-radius: 10px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  .project:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  }
+  .project img {
+    width: 100%;
+    margin: 10px 0;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+  }
+  .project img:hover {
+    transform: scale(1.1);
+  }
 </style>
 </head>
 <body>
 <div class="navbar">
-  <a href="Home.html"><i class="fas fa-home"></i>home</a>
-  <a href="About.html"><i class="fas fa-user"></i>About</a>
-  <a href="projects.html"><i class="fas fa-briefcase"></i>Projects</a>
+  <a href="Home.html"><i class="fas fa-home"></i> Home</a>
+  <a href="About.html"><i class="fas fa-user"></i> About</a>
+  <a href="projects.html"><i class="fas fa-briefcase"></i> Projects</a>
   <a href="https://github.com/woletee" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-  <a href="Cv1.pdf" target="_blank"><i class="fas fa-file-alt"></i>Resume</a>
-   <a href="Publication.html" target="_blank"><i class="fas fa-file-alt"></i>Publication.html</a>
+  <a href="Cv1.pdf" target="_blank"><i class="fas fa-file-alt"></i> Resume</a>
+  <a href="Publication.html" target="_blank"><i class="fas fa-book"></i>Publication</a>
   
-  <a href="https://www.notion.so/Reinforcement-Learning-Sutton-and-Barto-4be04ae89d3f460f898af0eb8f528950"><i class="fas fa-blog"></i>Study</a>
+  <a href="https://www.notion.so/Reinforcement-Learning-Sutton-and-Barto-4be04ae89d3f460f898af0eb8f528950"><i class="fas fa-blog"></i> Study</a>
 </div>
 
 <div class="header" id="home">
- <img src="/Images/im1.png" alt="Projects" title="Optional title attribute" style="order: 2; margin-left: 80px; max-width: 400px;" />
-
-  <h1 class="greeting">Hi there! <span class="wave">👋</span></h1>
-  <h1 class="greeting">   I'm W.Maryam LIYEW<span class="wave"></span></h1>
-  <div id="wordContainer"></div>
-    <script>
-document.addEventListener("DOMContentLoaded", function() {
-    const words = ["Artificial Intelligence Ms Student at GIST", "Web developer","Content Creator","Sketcher"];
-    const container = document.getElementById("wordContainer");
-    let wordIndex = 0;
-    let letterIndex = 0;
-   function displayLetter() {
-        if (wordIndex < words.length) {
-            if (letterIndex === 0) {
-                container.appendChild(document.createElement('span')); // New span for each word
-            }
-            if (letterIndex < words[wordIndex].length) {
-                container.lastChild.textContent += words[wordIndex][letterIndex++];
-                setTimeout(displayLetter, 100); 
-            } else {
-                wordIndex++;
-                letterIndex = 0;
-                setTimeout(displayLetter, 500); 
-            }
-        }
-    }
-    displayLetter();
-});
-
-  
-    </script>
-</div>
-
-
- 
-
-  
-
-
-  
-  <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Letter by Letter Display</title>
-    <style>
-        #wordContainer {
-            font-size: 24px;
-            font-family: Arial, sans-serif;
-        }
-      #wordContainer {
-    font-size: 24px;
-    font-family: Arial, sans-serif;
-    display: flex; 
-    flex-direction: column; 
-}
-body, html {
-  height: 100%;
-  margin: 0;
-}
-
-.social-footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: #2c2f33;
-  color: white;
-}
-
-.footer-content {
-  text-align: center;
-}
-
-.connect {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.social-icons {
-  margin-top: 20px;
-}
-
-.icon img {
-  height: 40px; /* Adjust as necessary */
-  width: 40px; /* Adjust as necessary */
-  margin: 0 10px;
-}
-
-.icon {
-  display: inline-block;
-  text-decoration: none;
-}
-
-.icon:hover {
-  opacity: 0.7;
-}
-
-    </style>
-</head>
-<body>
-  
-
-
-<div class="social-footer">
-  <div class="footer-content">
-    <p class="connect">FIND ME ON</p>
-    <p>Feel free to connect with me</p>
-    <div class="social-icons">
-      <a href="https://github.com/woletee" target="_blank" class="icon">
-        <img src="/Images/giti.png" alt="GitHub">
-      </a>
-      <a href="https://twitter.com/woletee" target="_blank" class="icon"> 
-        <img src="/Images/ic4.png" alt="Twitter">
-      </a>
-      <a href="https://www.linkedin.com/feed/" target="_blank" class="icon"> 
-        <img src="/Images/ic5.png" alt="LinkedIn">
-      </a>
-      <a href="https://www.instagram.com/w._maryam/" target="_blank" class="icon"> 
-        <img src="/Images/ic3.png" alt="Instagram">
-      </a>
-    </div>
+  <div class="greeting">
+    <h1>Welcome to My Portfolio</h1>
+    <p>Discover my projects and skills.</p>
+    <a href="#projects" class="cta">View Projects</a>
   </div>
 </div>
 
+<div class="content" id="projects">
+  <h1>My Recent Work</h1>
+  <p>Here are some of the projects that I have worked on recently:</p>
+  
+  <div class="projects">
+    <div class="project">
+        <h2>Trip Recommendation System</h2>
+        <a href="https://github.com/woletee/TRIP_Recommendation" target="_blank">
+            <img src="/Images/Untitled (1).png" alt="Trip Recommendation System" title="Trip Recommendation System">
+        </a>
+    </div>
+
+
+  <div class="project">
+      <h2>Korean Food Detection</h2>
+      <a href="https://github.com/woletee/korean_food_detection" target="_blank">
+        <img src="/Images/fodod.png" alt="Another Project" title="Korean Food Detection">
+      </a>
+    </div>
+    <div class="project">
+      <h2>Hulu Bus Ticket Booking System</h2>
+      <a href="https://github.com/woletee/Simple-Bus-Ticket-Booking-System" target="_blank">
+        <img src="/Images/hulu1.PNG" alt="Hulu Bus Ticket Booking System" title="Hulu Bus Ticket Booking System">
+      </a>
+    </div>
+
+    <div class="project">
+      <h2>Library Management System</h2>
+      <a href="https://github.com/woletee/Library-Management-System" target="_blank">
+        <img src="/Images/pro2.PNG" alt="Library Management System" title="Library Management System">
+      </a>
+    </div>
+
 
   
-
-</body>
-</html>
-
-
-
-
-
-  
+  </div>
 </div>
 
-<!-- Additional sections for About, Projects, Resume, and Blogs would go here -->
-
+<div class="footer">
+  <p>&copy; 2024 Mary.Liyew. All rights reserved.</p>
+</div>
 </body>
 </html>
