--- a/Publication.html
+++ b/Publication.html
@@ -121,7 +121,7 @@
 <div class="header" id="home">
   <div class="greeting">
     <h1>Welcome to My Publications</h1>
-    <p>Here are some of the papers I have published:</p>
+    <p>Here are some of the papers I have worked on:</p>
   </div>
 </div>
 
