--- a/Publication.html
+++ b/Publication.html
@@ -129,16 +129,16 @@
   <h1>My Publications</h1>
   <div class="publications">
     <div class="publication">
-      <h2>Paper Title 1</h2>
-      <p><a href="link_to_pdf1.pdf" target="_blank">Download PDF</a></p>
+      <h2>Abductive_symbolic_solver_on_abstraction_and_reasoning_corpus </h2>
+      <p><a href="Abductive_symbolic_solver_on_abstraction_and_reasoning_corpus (8).pdf" target="_blank">Download PDF</a></p>
     </div>
     <div class="publication">
-      <h2>Paper Title 2</h2>
-      <p><a href="link_to_pdf2.pdf" target="_blank">Download PDF</a></p>
+      <h2>Approaches on Tackling the Abstraction and Reasoning Corpus</h2>
+      <p><a href="ARC _MLDL_240624_222727.pdf" target="_blank">Download PDF</a></p>
     </div>
     <div class="publication">
-      <h2>Paper Title 3</h2>
-      <p><a href="link_to_pdf3.pdf" target="_blank">Download PDF</a></p>
+      <h2>Reinforement Learning Approach For solving the 1D-ARC</h2>
+      <p><a href="Reinforcement_Learning_Final_Report_1D_ARC_ (3).pdf" target="_blank">Download PDF</a></p>
     </div>
     <!-- Add more publications as needed -->
   </div>
