--- a/Publication.html
+++ b/Publication.html
@@ -136,6 +136,10 @@
       <h2>Approaches on Tackling the Abstraction and Reasoning Corpus</h2>
       <p><a href="ARC _MLDL_240624_222727.pdf" target="_blank">Download PDF</a></p>
     </div>
+     <div class="publication">
+      <h2>Trip Recommendation System</h2>
+      <p><a href="https://astonishing-moonflower-090.notion.site/Trip-Recommendation-System-99fb3dffdeb847759d714c1642c4ee73" target="_blank">Download pdf</a></p>
+    </div>
     <div class="publication">
       <h2>Reinforement Learning Approach For solving the 1D-ARC</h2>
       <p><a href="Reinforcement_Learning_Final_Report_1D_ARC_ (3).pdf" target="_blank">Download PDF</a></p>
