--- a/Publication.html
+++ b/Publication.html
@@ -131,7 +131,7 @@
     <div class="publication">
       <h2>Abductive_symbolic_solver_on_abstraction_and_reasoning_corpus </h2>
      <p>
-    <a href="Abductive_symbolic_solver_on_abstraction_and_reasoning_corpus (8).pdf" target="_blank">Download PDF</a> 
+    <a href="Abductive_symbolic_solver.pdf" target="_blank">Download PDF</a> 
     | 
     <a href="https://github.com/woletee/Knowledge-graph-DSL" target="_blank">
         View on GitHub
